After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762703 - Nautilus crashing when trying to open loopback device
Nautilus crashing when trying to open loopback device
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.19.x
Other Linux
: High critical
: 3.20
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-25 23:10 UTC by Maxim
Modified: 2016-03-07 11:33 UTC
See Also:
GNOME target: 3.20
GNOME version: 3.19/3.20


Attachments
Nautilus stack trace (26.91 KB, text/x-log)
2016-02-26 22:07 UTC, Maxim
  Details
content-bar: move content type handling to nautilus-file (8.54 KB, patch)
2016-03-07 11:22 UTC, Carlos Soriano
committed Details | Review
content-bar: move more content type handling (3.16 KB, patch)
2016-03-07 11:22 UTC, Carlos Soriano
committed Details | Review
window-slot: only create x-content-bar if necessary (1.07 KB, patch)
2016-03-07 11:22 UTC, Carlos Soriano
committed Details | Review
content-bar: don't auto destroy the widget (2.24 KB, patch)
2016-03-07 11:22 UTC, Carlos Soriano
committed Details | Review

Description Maxim 2016-02-25 23:10:21 UTC
When I mount any ISO  as loopback device through gnome-disk-utility(equivalent to udisksctl loop-setup -f --file), and trying to open in Nautilus, then it  fails.

dmesg 
nautilus[2087]: segfault at ffffffffffffffd0 ip 00007f1421e9a2a9 sp 00007ffef3fe2a90 error 5 in libgtk-3.so.0.1910.0[7f1421d1a000+703000]
Comment 1 Carlos Soriano 2016-02-26 15:52:31 UTC
Thanks for taking the time to report this.
Without a stack trace from the crash it's very hard to determine what caused it.
Can you get us a stack trace? Please see https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces for more information on how to do so. When pasting a stack trace in this bug report, please reset the status of this bug report from NEEDINFO to its previous status. Thanks in advance!
Comment 2 Maxim 2016-02-26 22:07:55 UTC
Created attachment 322496 [details]
Nautilus stack trace
Comment 3 Maxim 2016-03-02 14:57:04 UTC
Also, I can not open my USB flash drive and SD card.
Comment 4 Carlos Soriano 2016-03-07 11:22:04 UTC
Created attachment 323251 [details] [review]
content-bar: move content type handling to nautilus-file

All the other content type functions are there, and we will need it
anyway in an upcoming patch.
Comment 5 Carlos Soriano 2016-03-07 11:22:10 UTC
Created attachment 323252 [details] [review]
content-bar: move more content type handling

And rely on file-utilities to check whether we can should handle
those mime types.
Comment 6 Carlos Soriano 2016-03-07 11:22:17 UTC
Created attachment 323253 [details] [review]
window-slot: only create x-content-bar if necessary

We were creating the x-content-bar every time, then the content bar
was destroying itself (?) if no content type could be handled.
Just avoid to create the content bar if no necessary.
Comment 7 Carlos Soriano 2016-03-07 11:22:24 UTC
Created attachment 323254 [details] [review]
content-bar: don't auto destroy the widget

We were auto destroying the content bar if the mime type couldn't
be handled.

This is wrong since the caller is not aware of anything, trying to show
or do other things with the destroyed widget.

I'm not sure how this even work, if it worked at all.
Previously it wasn't crashing because gtk+ was failing gratefully,
however, with the gadget rework, this makes gtk+ crash.

We fixed this in the previous patch, only creating the content bar if
we can handle the myme types.
This patch adds a few more guards and, in any case, avoid to destroy the
widget inside the widget itself.
Comment 8 Carlos Soriano 2016-03-07 11:33:29 UTC
Attachment 323251 [details] pushed as 50298ac - content-bar: move content type handling to nautilus-file
Attachment 323252 [details] pushed as 9c54dea - content-bar: move more content type handling
Attachment 323253 [details] pushed as a974938 - window-slot: only create x-content-bar if necessary
Attachment 323254 [details] pushed as afdc6f9 - content-bar: don't auto destroy the widget