content-bar: move content type handling to nautilus-file

All the other content type functions are there, and we will need it
anyway in an upcoming patch.

https://bugzilla.gnome.org/show_bug.cgi?id=762703